# docs/swagger.json
@@ -137,6 +137,21 @@
                 }
             }
         },
+        "/user/SendMessage": {
+            "get": {
+                "tags": [
+                    "Websocket"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/UpdateUser": {
             "put": {
                 "tags": [
