# router/app.go
@@ -20,6 +20,7 @@ func Router() *gin.Engine{
 	router.DELETE("/user/DeleteUser",service.DeleteUser)
 	router.PUT("/user/UpdateUser",service.UpdateUser)
 	router.POST("/user/Login",service.Login)
+	router.GET("user/SendMessage",service.WebsocketHandler)
 
 	return router
 }
